--- a/classifier/beer/templates/main.html
+++ b/classifier/beer/templates/main.html
@@ -8,18 +8,19 @@
   <meta name="description" content="BeerClassifier">
   <meta name="author" content="Rafael_Bernardes">
 
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
 </head>
 <body>
+
   
   {% block content %}
 
   {% endblock %}
-  
-  <hr>
-
-  <h5>Our footer<h5>
 
 </body>
 </html>
