--- a/classifier/beer/templates/beer/dashboard.html
+++ b/classifier/beer/templates/beer/dashboard.html
@@ -21,15 +21,15 @@
                 </div>
                 <div class=".col-auto">
                     <label class="form-label">OG</label>
-                    <input type="number" class="form-control p-3 border bg-light" placeholder="Ex: 1.045" aria-label="OG" name="OG" >
+                    <input type="number" class="form-control p-3 border bg-light" step="0.001" placeholder="Ex: 1,045" aria-label="OG" name="OG" >
                 </div>
                 <div class=".col-auto">
                     <label class="form-label">FG</label>
-                    <input type="number" class="form-control p-3 border bg-light" placeholder="Ex: 1.008" aria-label="FG" name="FG" >
+                    <input type="number" class="form-control p-3 border bg-light" step="0.001" placeholder="Ex: 1,008" aria-label="FG" name="FG" >
                 </div>
                 <div class=".col-auto">
                     <label class="form-label">ABV</label>
-                    <input type="number" class="form-control p-3 border bg-light" placeholder="Ex: 4.5" aria-label="ABV" name="ABV" >
+                    <input type="number" class="form-control p-3 border bg-light" step="0.1" placeholder="Ex: 4,5" aria-label="ABV" name="ABV" >
                 </div>
                 <div class=".col-auto">
                     <input class="btn btn-info p-3 btn-space" type="submit" value="Submit">
